added branch dev

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title12345</title>
+
 </head>
 <body>
-
+<p>Добавлена ветка Dev</p>
 </body>
 </html>
